rpmdevtools 8.6 (2015-05-10)

  Ville Skyttä:
  - Update bash completion setup for modern bash-completion
  - Fall back to username in -packager (#29)
  - Do not define %_smp_mflags in -setuptree (#1198009)
  - Print usage only once in -vercmp hyphen warning
  - Always check hyphens in -vercmp no matter where EVR comes from
  - Python spec template improvements
  - Avoid spectool warnings on invalid input (#1219917)
  - Drop %defattr from spec templates (#30)

  Slavek Kabrda:
  - Python spec template improvements (#28)

rpmdevtools 8.5 (2014-10-20)

  Ville Skyttä:
  - Install default curlrc, add --insecure to it.
  - Support case insensitive Release tag in -bumpspec fallback.
  - Add LZ4, zlib, and qpress support to -extract.
  - Sync with qa-robot upstream 0.3.6-alt1 (#1004450).
  - Exclude .git and .svn from -bumpspec completions by default (#22).
  - Make -rmdevelrpms work with Python 3; Python >= 2.6 is now required.
  - Avoid duplicate argument completions (#22).
  - Recognize .deb archives in -extract per their new IANA MIME type.
  - Update file strings for recognizing jar and friends in -extract.
  - Fix -bumpspec encoding issues with Python 3 (#23).
  - Explicitly error out on invalid number of args to -vercmp.
  - Make -vercmp warn if parsed epoch, version, or release contains a hyphen.
  - Make -extract less sensitive to upper/lowercase "file" output.

  Michael Schwendt:
  - Avoid some superfluous bumps in -bumpspec (#789330).
  - Add --new option to -bumpspec (#14).

  Ralph Bean:
  - Preserve Release whitespace with bumpspec --new (#27).

rpmdevtools 8.4 (2013-10-07)

  Ville Skyttä:
  - Drop bundled devscripts, they're packaged separately now (#920163).
  - Do not erase any files with -wipetree if given an argument.
  - Exit with zero exit status from rpminfo -h/--help (#949976).
  - Support 7z in -extract with 7z in addition to 7za.
  - Output template %changelog entry from -newspec (#980897).
  - Support non-lowercase %changelog in -bumpspec.