@@ -1,3 +1,8 @@
+rpmdevtools x.x (201x-xx-xx)
+
+  Ville Skyttä:
+  - Use %make_build for rpm >= 4.12 in -newspec
+
 rpmdevtools 8.6 (2015-05-10)
 
   Ville Skyttä:
